2003-06-04  Dani Carbonell  <bocata@panete.net>

	* src/commands.h (show_stop_button, show_start_button): new functions.

	* src/commands.c: changed the button order.
	(make_menus): hide the stop button just after the toolbar has been created.
	(show_stop_button): new function, it will hide the start button,
	and show the stop one.
	(show_start_button): new function, it will show the start button,
	and hide the stop one.

	* src/tetrinet.c (tetrinet_inmessage): show / hide the toolbar
	buttons when required.

2003-06-03  Jordi Mallach  <jordi@sindominio.net>

	* gtetrinet.desktop.in: change value of Terminal from 0 to false to
	placate desktop-file-validate.

2003-06-02  Dani Carbonell  <bocata@panete.net>

	* src/dialogs.c (prefdialog_new): changed the size of some widgets
	in the Keyboard tab.

	* src/winlist.c (winlist_page_new): added scrollbars to the
	winlist, also made it bigger.

2003-06-02  Jordi Mallach  <jordi@dindominio.net>

	* configure.in (ALL_LINGUAS): Added "eu" (Basque).

2003-06-02  Dani Carbonell  <bocata@panete.net>

	* src/fields.c (fields_page_new): create here the cursors that
	will be used later to hide/restore the main cursor.
	(fields_expose_event, fields_nextpiece_expose) 
	(fields_specials_expose): hide the cursor if the user is in a
	game, show it otherwise.

	* src/dialogs.c (connectingdialog_new): set a parent for this
	window, set it modal, and don't show it in the windows list.
	

2003-05-28  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-04-14  Dani Carbonell  <bocata@panete.net>

	* icons/ added to CVS
	
	* Makefile.am: added "icons" to SUBDIRS
	* configure.in: added the "icons" directory

	* src/Makefile.am: changed PIXMAPSDIR constant

	* src/commands.c: changed the toolbar icons

	* src/partyline.c (partyline_update_channel_list): update the channel
	list only if we're connected.
	(partyline_show_channel_list): update the list when it's enabled.
